Add quicksync to dsm manager options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,7 +286,7 @@ IF(ICARUS_USE_H5PART)
 ENDIF(ICARUS_USE_H5PART)
 
 TARGET_LINK_LIBRARIES(${PLUGIN_NAME} vtkIOXdmf2 pqApplicationComponents)
-TARGET_LINK_LIBRARIES(${PLUGIN_NAME} vtkxdmf2 H5FDdsm hdf5 ${ICARUS_BOOST_LIBS})
+TARGET_LINK_LIBRARIES(${PLUGIN_NAME} vtkxdmf2 vtksys H5FDdsm hdf5 ${ICARUS_BOOST_LIBS})
 
 #--------------------------------------------------
 # Converter
